--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer components {
+  .btn-primary {
+    @apply bg-[#42A9E4] hover:bg-blue-500 w-full text-white p-2 rounded-md;
+  }
   .hideIcons span {
     @apply hidden;
   }
@@ -19,5 +22,11 @@
   }
   .hasStory {
     @apply p-[2px] rounded-full  bg-gradient-to-r bg-gradient-to-r from-[#FFA600] via-[#F5007D] to-pink-500;
+  }
+  .basic-input {
+    @apply border p-2 rounded placeholder:text-gray-500;
+  }
+  .divider {
+    @apply bg-gray-400 h-[1px] w-full;
   }
 }
