--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,11 @@
   }
 
   .menuitem {
-    @apply flex items-center gap-4 hover:bg-[#fafafad9] p-2 cursor-pointer w-full justify-center md:justify-start;
+    @apply flex items-center rounded-md gap-4 hover:bg-[#fafafad9] p-2 cursor-pointer w-full justify-center md:justify-start;
+  }
+
+  body.dark .menuitem {
+    @apply hover:bg-[#312e2e];
   }
 
   .menuitem span {
@@ -40,7 +44,7 @@
   }
 
   .menuIcon {
-    @apply w-6 h-6 cursor-pointer;
+    @apply w-6 h-6 cursor-pointer hover:bg-transparent;
   }
   .hasStory {
     @apply p-[2px] rounded-full  bg-gradient-to-r bg-gradient-to-r from-[#FFA600] via-[#F5007D] to-pink-500;
@@ -54,4 +58,9 @@
   .menuButton {
     @apply bg-black-child py-2 px-5 flex items-center w-60 justify-between border-b border-[#E5E7EB]  hover:bg-[#e5e7eb];
   }
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
