--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,6 +65,9 @@
   .edit-button {
     @apply bg-gray-100 hover:bg-gray-200 text-[14px]  font-medium px-4 py-1 rounded-sm;
   }
+  .follow-btn {
+    @apply font-medium text-[#36ABF8] cursor-pointer;
+  }
 }
 
 body {
